--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@actions/http-client": "^2.1.1",
     "@actions/io": "^1.0.2",
     "@actions/tool-cache": "^2.0.1",
+    "@octokit/rest": "^20.0.2",
     "semver": "^7.5.4",
     "uuid": "^9.0.1"
   },
